<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MobileLists.ListActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary"
        app:popupTheme="@style/AppTheme"
        android:contentInsetLeft="0dp"
        android:contentInsetStart="0dp"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        android:contentInsetRight="0dp"
        android:contentInsetEnd="0dp"
        app:contentInsetRight="0dp"
        app:contentInsetEnd="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/toolbar_padding_left_right"
            android:paddingRight="@dimen/toolbar_padding_left_right">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_alignParentLeft="true"
                android:textSize="@dimen/title_bar_text_size"
                android:textColor="@color/text_white"
                android:text="@string/mobile_phone"/>

            <ImageView
                android:id="@+id/ivOptions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_alignParentRight="true"
                android:src="@drawable/ic_sort_white"/>

        </RelativeLayout>

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvMobileList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="center_horizontal"
            android:paddingBottom="@dimen/tab_padding"
            android:textSize="@dimen/tab_text_size"
            android:textColor="@color/text_white"
            android:text="@string/tab_mobile"/>

        <TextView
            android:id="@+id/tvFavorites"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="center_horizontal"
            android:paddingBottom="@dimen/tab_padding"
            android:textSize="@dimen/tab_text_size"
            android:textColor="@color/text_white_dark"
            android:text="@string/tab_favorite"/>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/flList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>